// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions stats mergeStatsFilters() should return an action to merge stats filters 1`] = `
Object {
  "filters": Immutable.Map {
    "tags": Immutable.List [
      1,
      2,
      3,
    ],
  },
  "type": "MERGE_STATS_FILTERS",
}
`;

exports[`actions stats resetStatsFilters() should return an action to reset stats filters 1`] = `
Object {
  "type": "RESET_STATS_FILTERS",
}
`;

exports[`actions stats setStatsFilters() should return an action to set stats filters 1`] = `
Object {
  "filters": Immutable.Map {
    "tags": Immutable.List [
      1,
      2,
      3,
    ],
  },
  "type": "SET_STATS_FILTERS",
}
`;
